--- a/src/css/components/_main-visual.scss
+++ b/src/css/components/_main-visual.scss
@@ -103,6 +103,7 @@
       }
       @include mq.sp {
         width: 35%;
+        margin-left: 5px;
       }
     }
   }
